--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-redux": "^4.0.0",
-    "react-select": "^0.9.1",
+    "react-select": "^1.0.0-beta5",
     "redux": "^3.0.3",
     "resolve-url-loader": "^1.3.0",
     "sass-loader": "^3.0.0",
