--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-sass": "^3.4.0",
     "promise-polyfill": "^1.1.6",
     "react": "^0.14.0",
+    "react-d3": "^0.4.0",
     "react-dom": "^0.14.0",
     "react-redux": "^4.0.0",
     "react-select": "^1.0.0-beta5",
